{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 502,
  "lineage": "f755e9d8-bf4e-3d1b-7de5-30151e335898",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-014f66168c82421a6",
            "public_dns": "ec2-18-195-109-115.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.109.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:loadbalancer/elb",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-1896162747.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-00aab1e799a3339cf"
            ],
            "source_security_group": "560992162784/elb-sg",
            "source_security_group_id": "sg-00aab1e799a3339cf",
            "subnets": [
              "subnet-06cc16eb9fb903e1f",
              "subnet-09f2dbbf7691d59f1"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_subnet.subnet3",
            "aws_subnet.subnet4",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b78a495f6c73014a",
            "owner_id": "560992162784",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014f66168c82421a6",
            "id": "nat-0d5dbc6d4f9d689f7",
            "network_interface_id": "eni-078a72c9f3f561c8d",
            "private_ip": "10.0.8.243",
            "public_ip": "18.195.109.115",
            "subnet_id": "subnet-0e5e932d9b3bac130",
            "tags": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet8",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a0925084f5b6d9df",
            "owner_id": "560992162784",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d5dbc6d4f9d689f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_subnet.subnet8",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a0b08a5f86f0cc12",
            "owner_id": "560992162784",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b78a495f6c73014a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad2dc2fba7f4cc7f",
            "route_table_id": "rtb-0a0925084f5b6d9df",
            "subnet_id": "subnet-004cf212b0a516461"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.subnet1",
            "aws_subnet.subnet8",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5a2db13e045de80",
            "route_table_id": "rtb-0a0925084f5b6d9df",
            "subnet_id": "subnet-0c5d92f9c02eec8bf"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.subnet2",
            "aws_subnet.subnet8",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046693b4c4816c56e",
            "route_table_id": "rtb-0a0925084f5b6d9df",
            "subnet_id": "subnet-0e9db9b7c74492ff8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.subnet5",
            "aws_subnet.subnet8",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031613f313f0e36c7",
            "route_table_id": "rtb-0a0925084f5b6d9df",
            "subnet_id": "subnet-06d9a7f5ed41849c2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.subnet6",
            "aws_subnet.subnet8",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0013ed0ffd2f603ba",
            "route_table_id": "rtb-0a0b08a5f86f0cc12",
            "subnet_id": "subnet-06cc16eb9fb903e1f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet3",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a07e6299cb1e8af",
            "route_table_id": "rtb-0a0b08a5f86f0cc12",
            "subnet_id": "subnet-09f2dbbf7691d59f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet4",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ad5578e9a322641",
            "route_table_id": "rtb-0a0b08a5f86f0cc12",
            "subnet_id": "subnet-03cb92870adad204d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet7",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9fae55757800628",
            "route_table_id": "rtb-0a0b08a5f86f0cc12",
            "subnet_id": "subnet-0e5e932d9b3bac130"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet8",
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:security-group/sg-00aab1e799a3339cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00aab1e799a3339cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": null,
            "owner_id": "560992162784",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:security-group/sg-05b3a7aad11281c23",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b3a7aad11281c23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lc-sg",
            "name_prefix": null,
            "owner_id": "560992162784",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-004cf212b0a516461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-004cf212b0a516461",
            "map_public_ip_on_launch": false,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-0c5d92f9c02eec8bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c5d92f9c02eec8bf",
            "map_public_ip_on_launch": false,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-06cc16eb9fb903e1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06cc16eb9fb903e1f",
            "map_public_ip_on_launch": true,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnetelb-1"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-09f2dbbf7691d59f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09f2dbbf7691d59f1",
            "map_public_ip_on_launch": true,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnetelb-2"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-0e9db9b7c74492ff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0e9db9b7c74492ff8",
            "map_public_ip_on_launch": false,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnetdb-1"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet6",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-06d9a7f5ed41849c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-06d9a7f5ed41849c2",
            "map_public_ip_on_launch": false,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnetdb-2"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet7",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-03cb92870adad204d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-03cb92870adad204d",
            "map_public_ip_on_launch": false,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnet-1nat"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet8",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:subnet/subnet-0e5e932d9b3bac130",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0e5e932d9b3bac130",
            "map_public_ip_on_launch": false,
            "owner_id": "560992162784",
            "tags": {
              "Name": "subnet-2nat"
            },
            "vpc_id": "vpc-0b1aab330496ab4b8"
          },
          "dependencies": [
            "aws_vpc.myHAvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myHAvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:vpc/vpc-0b1aab330496ab4b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a13c825b7334010c",
            "default_route_table_id": "rtb-088ab349f95648fbe",
            "default_security_group_id": "sg-00ab2864fbc6c14e4",
            "dhcp_options_id": "dopt-36fe3e5c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1aab330496ab4b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-088ab349f95648fbe",
            "owner_id": "560992162784",
            "tags": {
              "Name": "myHAvpc"
            }
          }
        }
      ]
    }
  ]
}